MM-10795 - Fixing post control menu overlap

--- a/sass/responsive/_tablet.scss
+++ b/sass/responsive/_tablet.scss
@@ -358,7 +358,7 @@
                     float: left;
 
                     .col__reply {
-                        top: -21px;
+                        top: -30px;
                     }
 
                     .post__pinned-badge {
